infra/Kube/v3/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: olx-app
spec:
  selector:
    app: olx-api
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
