infra/Kube/v3/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: olx-app
spec:
  selector:
    app: olx-client
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
